<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context="com.example.hassa.flipflop.Signup">

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_First"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/hint_Last"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/hint_pass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signup"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginLeft="90dp"
        android:onClick="btnSubmit"
        android:text="@string/c"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/back"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="20dp"
        android:onClick="back"
        android:text="BACK"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>
